test_suite/tests/ui/enum-representation/untagged-and-internal.stderr
error: enum cannot be both untagged and internally tagged
 --> $DIR/untagged-and-internal.rs:4:9
  |
4 | #[serde(untagged)]
  |         ^^^^^^^^

error: enum cannot be both untagged and internally tagged
 --> $DIR/untagged-and-internal.rs:5:9
  |
5 | #[serde(tag = "type")]
  |         ^^^

error: aborting due to 2 previous errors

